[project]
name = "hunyuanvideomultilora"
description = "A custom LoRA-loading node designed to prevent issues such as blurriness and other artifacts when loading multiple LoRAs in HunYuan Video.\nUsage Tips: The connection method remains unchanged from the original. The only difference is the additional blocks_type option. Please select double_blocks."
version = "1.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/facok/ComfyUI-HunyuanVideoMultiLora"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "fok"
DisplayName = "ComfyUI-HunyuanVideoMultiLora"
Icon = ""
